# thesis-app

./: Justfile  README.md  docker-compose.yml
.github/: copilot-instructions.md
backend/: .env  .gitignore  Dockerfile  Justfile  README.md  logging_config.yml  main.py  pyproject.toml  setup.py
backend/app/: __init__.py  config.py  logging.py  main.py
backend/app/api/: __init__.py  faces.py
backend/app/db/: __init__.py  base.py  model.py  session.py
backend/app/services/: __init__.py  face_embedding.py  face_recognition.py
backend/scripts/: __init__.py  lfw_seed.py
backend/tests/: __init__.py  conftest.py  test_integration.py
database/: docker-compose.yml  init.sql  search_index_test.sql
frontend/: Dockerfile  Justfile  biome.json  package-lock.json  package.json
frontend/src/: App.css  App.tsx  FaceUploadForm.tsx  WebcamFaceCapture.tsx  api.ts  i18n.ts  main.tsx  utils.ts
frontend/src/components/: FaceUploadForm.tsx  ImageUpload.tsx  LanguageSelector.tsx  RecognitionResultDisplay.tsx  TabPanel.tsx  WebcamCapture.tsx
frontend/src/pages/: AddFacePage.tsx  GalleryPage.tsx  RecognizePage.tsx  UploadPage.tsx  WebcamPage.tsx
nginx/: nginx.conf
