[project]
name = "setosa-backend"
version = "0.1.0"
description = "Backend for Setosa, a simple face recognition system demo for my BE thesis."
authors = [
    { name = "Mikołaj Garbowski", email = "mikolaj.garbowski@gmail.com" },
]
dependencies = ["fastapi[all]>=0.116.1", "asyncpg>=0.30.0", "sqlalchemy[asyncio]>=2.0.43", "python-multipart>=0.0.20", "numpy>=2.3.2", "pgvector>=0.4.1", "facenet-pytorch>=2.5.3", "torch>=2.7.0", "pillow>=11.3.0", "pydantic-settings>=2.10.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false


[dependency-groups]
dev = [
    "requests>=2.32.5",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.0.0",
    "black>=25.9.0",
    "isort>=6.0.1",
    "pyright>=1.1.405",
    "radon>=6.0.1",
]


[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["app"]

[tool.pyright]
include = ["app"]
exclude = [
    "**/__pycache__",
    "tests",
]

typeCheckingMode = "basic"      # Use basic type checking (can be set to "strict" for stricter checks)
reportMissingImports = "error"  # Report missing imports as errors
reportMissingTypeStubs = false  # Do not require type stubs for third-party libraries
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportUnusedFunction = "error"

pythonVersion = "3.12"
pythonPlatform = "Linux"
venvPath = ".venv"